character sheet fragment

--- a/app/src/main/res/layout-land/fragment_explore.xml
+++ b/app/src/main/res/layout-land/fragment_explore.xml
@@ -25,16 +25,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/upButton"
-            android:layout_width="64dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="56dp"
-            android:layout_marginBottom="8dp"
-            android:text="U"
-            app:layout_constraintBottom_toTopOf="@+id/rightButton"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <TextView
             android:id="@+id/mapView"
             android:layout_width="300dp"
@@ -84,36 +74,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <Button
-            android:id="@+id/leftButton"
-            android:layout_width="64dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:text="L"
-            app:layout_constraintBottom_toTopOf="@+id/downButton"
-            app:layout_constraintEnd_toStartOf="@+id/rightButton" />
-
-        <Button
-            android:id="@+id/rightButton"
-            android:layout_width="64dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:text="R"
-            app:layout_constraintBottom_toTopOf="@+id/downButton"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-        <Button
-            android:id="@+id/downButton"
-            android:layout_width="64dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="56dp"
-            android:layout_marginBottom="16dp"
-            android:text="D"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <TextView
             android:id="@+id/nameField"
             android:layout_width="wrap_content"
@@ -137,15 +97,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
-            android:id="@+id/fightButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="42dp"
-            android:text="FIGHT"
-            app:layout_constraintBottom_toTopOf="@+id/upButton"
-            app:layout_constraintEnd_toEndOf="parent" />
-
         <ScrollView
             android:id="@+id/combatLog"
             android:layout_width="275dp"
@@ -161,13 +112,12 @@
             android:id="@+id/hpLayout"
             android:layout_width="481dp"
             android:layout_height="36dp"
-            android:layout_marginStart="100dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="16dp"
             android:orientation="horizontal"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/downButton"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
@@ -205,6 +155,77 @@
                 android:layout_weight="1"
                 android:text="TextView" />
         </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/combatButtons"
+            android:layout_width="192dp"
+            android:layout_height="80dp"
+            app:layout_constraintBottom_toTopOf="@+id/moveButtons"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                android:id="@+id/fightButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="FIGHT"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/blockButton" />
+
+            <Button
+                android:id="@+id/blockButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="block"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/moveButtons"
+            android:layout_width="185dp"
+            android:layout_height="160dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <Button
+                android:id="@+id/upButton"
+                android:layout_width="64dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="56dp"
+                android:text="U"
+                app:layout_constraintBottom_toTopOf="@+id/rightButton"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/downButton"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="56dp"
+                android:layout_marginBottom="16dp"
+                android:text="D"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/rightButton"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="R"
+                app:layout_constraintBottom_toTopOf="@+id/downButton"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+            <Button
+                android:id="@+id/leftButton"
+                android:layout_width="64dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:text="L"
+                app:layout_constraintBottom_toTopOf="@+id/downButton"
+                app:layout_constraintEnd_toStartOf="@+id/rightButton" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
