--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ControllerActivity"
+    tools:context="com.example.dungeoncrawler.ControllerActivity"
     >
 
     <androidx.fragment.app.FragmentContainerView
