--- a/app/src/main/res/layout-land/fragment_character_sheet.xml
+++ b/app/src/main/res/layout-land/fragment_character_sheet.xml
@@ -240,4 +240,14 @@
                 android:textSize="24sp" />
         </LinearLayout>
     </ScrollView>
+
+    <Button
+        android:id="@+id/closeButton"
+        android:layout_width="45dp"
+        android:layout_height="51dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="X"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
