--- a/app/src/main/res/layout-land/fragment_inventory.xml
+++ b/app/src/main/res/layout-land/fragment_inventory.xml
@@ -37,7 +37,7 @@
 
         <Button
             android:id="@+id/potionButton"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="128dp"
@@ -47,7 +47,7 @@
 
         <Button
             android:id="@+id/weaponButton"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="64dp"
             android:layout_marginEnd="128dp"
@@ -57,7 +57,7 @@
 
         <Button
             android:id="@+id/armorButton"
-            android:layout_width="wrap_content"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="128dp"
@@ -80,5 +80,16 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical" />
         </ScrollView>
+
+        <LinearLayout
+            android:id="@+id/selectItemLayout"
+            android:layout_width="385dp"
+            android:layout_height="95dp"
+            android:layout_marginEnd="348dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"></LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
