--- a/app/src/main/res/layout-land/fragment_char_creation.xml
+++ b/app/src/main/res/layout-land/fragment_char_creation.xml
@@ -47,9 +47,16 @@
             <Spinner
                 android:id="@+id/raceSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="239dp"
+                android:layout_height="64dp"
                 android:layout_weight="1"
                 android:entries="@array/races" />
+
+            <TextView
+                android:id="@+id/raceDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAlignment="center" />
         </LinearLayout>
 
         <LinearLayout
@@ -69,9 +76,16 @@
             <Spinner
                 android:id="@+id/casteSpinner"
                 android:layout_width="match_parent"
-                android:layout_height="238dp"
+                android:layout_height="64dp"
                 android:layout_weight="1"
                 android:entries="@array/castes" />
+
+            <TextView
+                android:id="@+id/casteDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textAlignment="center" />
 
         </LinearLayout>
 
