--- a/app/src/main/res/layout-land/fragment_explore.xml
+++ b/app/src/main/res/layout-land/fragment_explore.xml
@@ -79,41 +79,30 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <Button
             android:id="@+id/inventoryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginBottom="32dp"
             android:text="I"
             android:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toTopOf="@+id/characterButton"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/characterButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="33dp"
-            android:layout_marginBottom="33dp"
+            android:layout_marginBottom="144dp"
             android:text="CS"
             android:visibility="visible"
-            app:layout_constraintBottom_toTopOf="@+id/equipmentButton"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/inventoryButton" />
-
-        <Button
-            android:id="@+id/equipmentButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="100dp"
-            android:text="E"
-            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
@@ -123,8 +112,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -134,16 +125,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textAlignment="textEnd"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ScrollView
             android:id="@+id/combatLog"
-            android:layout_width="275dp"
-            android:layout_height="118dp"
+            android:layout_width="266dp"
+            android:layout_height="215dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
@@ -157,13 +150,15 @@
             android:id="@+id/hpLayout"
             android:layout_width="481dp"
             android:layout_height="36dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="8dp"
             android:orientation="horizontal"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mapLayout">
 
             <TextView
                 android:id="@+id/pcHP"
@@ -203,10 +198,14 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/combatButtons"
-            android:layout_width="192dp"
-            android:layout_height="80dp"
-            app:layout_constraintBottom_toTopOf="@+id/moveButtons"
-            app:layout_constraintEnd_toEndOf="parent">
+            android:layout_width="198dp"
+            android:layout_height="57dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginBottom="64dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/combatLog">
 
             <Button
                 android:id="@+id/fightButton"
@@ -227,59 +226,16 @@
                 app:layout_constraintEnd_toEndOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/moveButtons"
-            android:layout_width="185dp"
-            android:layout_height="160dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-
-            <Button
-                android:id="@+id/upButton"
-                android:layout_width="64dp"
-                android:layout_height="48dp"
-                android:layout_marginEnd="56dp"
-                android:text="U"
-                app:layout_constraintBottom_toTopOf="@+id/rightButton"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <Button
-                android:id="@+id/downButton"
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="56dp"
-                android:layout_marginBottom="16dp"
-                android:text="D"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <Button
-                android:id="@+id/rightButton"
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="R"
-                app:layout_constraintBottom_toTopOf="@+id/downButton"
-                app:layout_constraintEnd_toEndOf="parent" />
-
-            <Button
-                android:id="@+id/leftButton"
-                android:layout_width="64dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:text="L"
-                app:layout_constraintBottom_toTopOf="@+id/downButton"
-                app:layout_constraintEnd_toStartOf="@+id/rightButton" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
         <TextView
             android:id="@+id/locationField"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
             android:text="TextView"
             android:textAlignment="center"
             android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/mapLayout"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -288,20 +244,20 @@
             android:id="@+id/stairsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="stairs"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/moveButtons" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TableLayout
             android:id="@+id/mapLayout"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="144dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/combatButtons"
-            app:layout_constraintHorizontal_bias="0.306"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.495" />
