--- a/app/src/main/res/layout-land/fragment_inventory.xml
+++ b/app/src/main/res/layout-land/fragment_inventory.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/closeInventory"
-        android:layout_width="45dp"
-        android:layout_height="51dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="X"
@@ -85,7 +85,9 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/armorButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/inventoryLabel" />
 
