customizing the game with colors and other things

--- a/app/src/main/res/layout-land/fragment_char_creation.xml
+++ b/app/src/main/res/layout-land/fragment_char_creation.xml
@@ -10,17 +10,19 @@
         android:id="@+id/characterCreation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="Character Creation"
         android:textAlignment="center"
         android:textAllCaps="false"
+        android:textColor="#874040"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="716dp"
+        android:layout_height="293dp"
         android:layout_marginStart="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
@@ -42,21 +44,28 @@
                 android:layout_height="wrap_content"
                 android:text="Select race"
                 android:textAlignment="center"
+                android:textColor="#874040"
                 android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/raceSpinner"
+                style="@style/spinnerStyle"
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:entries="@array/races" />
+                android:entries="@array/races"
+                android:textAlignment="center"
+                android:textColor="#964B00"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/raceDescription"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="207dp"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="#874040"
+                android:textSize="16dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -71,21 +80,28 @@
                 android:layout_height="wrap_content"
                 android:text="Select caste"
                 android:textAlignment="center"
+                android:textColor="#874040"
                 android:textSize="20sp" />
 
             <Spinner
                 android:id="@+id/casteSpinner"
+                style="@style/spinnerStyle"
                 android:layout_width="match_parent"
                 android:layout_height="64dp"
                 android:layout_weight="1"
-                android:entries="@array/castes" />
+                android:entries="@array/castes"
+                android:textAlignment="center"
+                android:textColor="#964B00"
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/casteDescription"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="205dp"
                 android:text="TextView"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="#874040"
+                android:textSize="16dp" />
 
         </LinearLayout>
 
@@ -101,6 +117,7 @@
                 android:layout_height="wrap_content"
                 android:text="Assign attribute points"
                 android:textAlignment="center"
+                android:textColor="#874040"
                 android:textSize="20sp" />
 
             <EditText
@@ -110,35 +127,52 @@
                 android:layout_marginLeft="100dp"
                 android:clickable="false"
                 android:ems="10"
-                android:inputType="none"
                 android:enabled="false"
+                android:inputType="none"
                 android:minHeight="48dp"
                 android:text="3"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="#874040" />
 
             <Button
                 android:id="@+id/STRbutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="+STR" />
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="+STR"
+                android:textColor="#806046"
+                android:textSize="24dp" />
 
             <Button
                 android:id="@+id/DEXbutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="+DEX" />
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="+DEX"
+                android:textColor="#806046"
+                android:textSize="24dp" />
 
             <Button
                 android:id="@+id/INTbutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="+INT" />
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="+INT"
+                android:textColor="#806046"
+                android:textSize="24dp" />
 
             <Button
                 android:id="@+id/WILLbutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="+WILL" />
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="+WILL"
+                android:textColor="#806046"
+                android:textSize="24dp" />
 
         </LinearLayout>
     </LinearLayout>
@@ -149,8 +183,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="289dp"
         android:layout_marginEnd="289dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="Enter Choices"
+        android:textColor="#806046"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
