--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
     <!-- Base application theme. -->
     <style name="Theme.DungeonCrawler" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
+        <item name="colorPrimary">@color/sand</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
@@ -13,5 +13,15 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/alagard</item>
+
+        <item name="spinnerStyle">@style/Widget.AppCompat.Spinner</item>
     </style>
+    <style name="spinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:textAlignment">center</item>
+        <item name="android:textColor">#964B00</item>
+        <item name="android:textSize">20dp</item>
+
+    </style>
+
+
 </resources>
