--- a/app/src/main/res/layout-land/fragment_inventory.xml
+++ b/app/src/main/res/layout-land/fragment_inventory.xml
@@ -50,12 +50,23 @@
             android:id="@+id/potionButton"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="128dp"
             android:enabled="false"
             android:text="Button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/armorButton" />
+
+        <Button
+            android:id="@+id/setSpellButton"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="128dp"
+            android:enabled="false"
+            android:text="Button"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/potionButton" />
 
         <Button
             android:id="@+id/weaponButton"
@@ -72,7 +83,7 @@
             android:id="@+id/armorButton"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="128dp"
             android:enabled="false"
             android:text="Button"
@@ -90,6 +101,26 @@
             app:layout_constraintEnd_toStartOf="@+id/armorButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/inventoryLabel" />
+
+        <ScrollView
+            android:id="@+id/spellView"
+            android:layout_width="172dp"
+            android:layout_height="327dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.499"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.466"
+            tools:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
