--- a/app/src/main/res/layout-land/fragment_explore.xml
+++ b/app/src/main/res/layout-land/fragment_explore.xml
@@ -237,6 +237,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:text="spell"
+            android:visibility="gone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/characterButton" />
 
